--- a/css/index.css
+++ b/css/index.css
@@ -25,3 +25,15 @@
   padding: 0.5rem 1rem;
   height: 100%;
 }
+
+.content-container {
+  display: flex;
+  align-items: center;
+  align-content: center;
+  padding-top: 32px;
+}
+
+.content-container h1 {
+  text-align: center;
+  margin: 0 auto;
+}
